# flutter_hdf5

./: .gitignore  MIGRATION_DOCUMENTATION.md
build-x86_64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  hdf5-targets.cmake
build-x86_64/hl/: Makefile  cmake_install.cmake
build-x86_64/hl/src/: Makefile  cmake_install.cmake
build-x86_64/src/: H5build_settings.c  H5pubconf.h  Makefile  cmake_install.cmake  libhdf5.settings
build-x86_64/src/H5FDsubfiling/: Makefile  cmake_install.cmake
build-x86_64/utils/: Makefile  cmake_install.cmake
build-x86_64/utils/mirror_vfd/: Makefile  cmake_install.cmake
build-x86_64/utils/subfiling_vfd/: Makefile  cmake_install.cmake  h5fuse.sh
hdf5/: README.md  SLICE_TEST.h5  diamond_ds.hdf5  pubspec.yaml
hdf5/android/app/: build.gradle
hdf5/example/: README.md  pubspec.yaml
hdf5/example/lib/: main.dart
hdf5/example/linux/: CMakeLists.txt  (+1 more)
hdf5/lib/: hdf5.dart  main.dart
hdf5/linux/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hdf5_deconstruct.cpp  hdf5_deconstruct.h  my_application.cc  test  test.cpp
hdf5/linux/flutter/: generated_plugins.cmake
hdf5/macos/: hdf5.podspec
hdf5/test/: dataset_quantify.hdf5  hdf5_test.dart  widget_test.dart  zero_copy_test.dart
hdf5/web/: index.html  manifest.json
hdf5/windows/: CMakeLists.txt
hdf5_c_libs/: .gitignore  .metadata  README.md  pubspec.yaml
hdf5_c_libs/lib/: hdf5_c_libs.dart
hdf5_c_libs/linux/: CMakeLists.txt
hdf5_c_libs/macos/: hdf5_c_libs.podspec
hdf5_c_libs/windows/: CMakeLists.txt
(+77 files in other folders)
